Fixed alignment of text in input boxes

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -50,6 +50,7 @@
   .input{
     border: white solid 1px;
     background: transparentize(grey, 0.8);
+    padding-left: 3%;
   }
 }
 
